# web-vcportal

./: .gitignore  README.md  pyproject.toml  render.py  server.conf
.github/workflows/: deploy.yml
data/: manifest.yml
data/articles/: about.md
html/: _layout.html  _markdown.html  about.md  index.html  manifest.yaml  style.css
